--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 html, body {
-  background-image: linear-gradient(#000, #fff);
+  background-image: linear-gradient(to top right, #b004b0, #7d04e0ff);
 }
 
 .hometitle {
