--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 html,
 body {
   min-height: 100%;
-  background-image: linear-gradient(to right, #000000, #000000);
+  background-image: linear-gradient(to right, #270047, #6103a0);
   background-repeat: no-repeat;
   background-size: cover;
   font-family: 'Noto Sans', sans-serif;
